<resources>
    <string name="app_name">ProtectMe!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ProtectMe!</string>
    <string name="nav_header_subtitle">VPN for everyone !</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_VPN">VPN</string>
    <string name="navigation_Configuration">Box Configuration</string>
    <string name="navigation_Update">Update</string>
    <string name="navigation_List">List</string>

    <!-- Main view -->
    <string name="hello_VPN">Click on connect to be secure !</string>
    <string name="VPN_connect">CONNECT !</string>
    <string name="VPN_connectStart">Start VPN!</string>
    <string name="VPN_connectStop">Stop VPN!</string>
    <string name="ConnectTO">Connected to : </string>
    <string name="ConnectTONothing">No configuration !</string>

    <!-- view_information -->
    <string name="title_information">How to use ProtectMe!</string>
    <string name="list_information"><b><big></big></b>
        \n <li>start your ProtectMe! Box</li>
        \n <li>connect to your ProtectMe! By Bluetooth with configuration tab</li>
        \n <li>follow the instructions</li>
        \n <li>begin to use your secured connection with VPN tab</li>                                                                   
        \n <li>manage your vpn profiles with List tab</li>
        \n <li>don\'t forget to update your box by the update tab</li>
    </string>
    <string name="close_button_information">Close Me!</string>

    <!-- Configuration view -->
    <string name="hello_Config">Configuration</string>
    <string name="active_box_config">First, start the ProtectMe! box then click on "First configuration"</string>
    <string name="only_first_config">If this is the first configuration.</string>
    <string name="add_Phone_config">If this is to get an VPN access to your Box</string>
    <string name="connect_Bluetooth_config">Be sure to have Bluetooth and wifi activate</string>
    <string name="start_config">Start configuration</string>
    <string name="begin_config">First configuration</string>
    <string name="begin_addPhone">Get VPN access</string>
    <string name="next_config">Next step</string>
    <string name="wait_config">Complete before</string>
    <string name="no_Bluetooth_config">You can\'t active Bluetooth</string>
    <string name="no_Location_config">You can\'t access to Location authorizations</string>
    <string name="enable_LocationTitle">GPS setting!</string>
    <string name="enable_Location">Please active the GPS, it\'s needed to get SSID informations</string>

    <!-- Configuration_wifi view -->
    <string name="hello_Config_wifi">1. Wifi</string>
    <string name="label_ssid_Config_wifi">your wifi : </string>
    <string name="ssid_Config_wifi">waiting information</string>
    <string name="password_Config_wifi">write wifi password</string>
    <string name="second_password_Config_wifi">write password a second time</string>
    <string name="error_password_Config_wifi">Passwords are differents</string>

    <!-- Configuration_Bluetooth view -->
    <string name="hello_Bluetooth">2. Bluetooth</string>
    <string name="select_Bluetooth">Wait, then clic on Start Configuration</string>
    <string name="wait_Bluetooth_conf">Wait during configuration</string>

    <!-- Finish Configuration -->
    <string name="informations_Bluetooth">For configuration, we have activated Wifi, Bluetooth and Localisation. If you don\'t need it. Disable them!</string>
    <string name="title_Bluetooth_conf_Ok">Configuration terminated</string>

    <!-- List Box view -->
    <string name="ListBOX">List Box</string>
    <string name="ManageBox">rename, delete or make default your box</string>
    <string name="renameBox">write new name</string>
    <string name="ButtonRename">Rename</string>

    <!-- Update view -->
    <string name="Hello_update">Updates</string>
    <string name="nothing">No protectMe! Server update available, check on Play Store if new Android Update available</string>
    <string name="something">New ProtectMe! update available, be sure to have internet access</string>
    <string name="apply_update">apply new update</string>
    <string name="currentVersionLabel">Current Version</string>
    <string name="currentVersion">--No_information--</string>
    <string name="hashRecovered">hash recovered</string>
    <string name="UpdateNameRecovered">update name recovered</string>
    <string name="updateInfo">This update will take long time be patient!</string>
</resources>
