<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container_config"
    tools:context=".Config_Fragment">

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Hello_update"
        android:gravity="center_horizontal"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/update_currentVersion_label"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:text="@string/currentVersionLabel"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/update_currentVersion_field"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:text="@string/currentVersion"
        android:gravity="center_horizontal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/update_available"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:text="@string/nothing"
        android:gravity="center_horizontal"
        android:textSize="20sp" />


    <Button
        android:id="@+id/update_applyUpdate"
        android:textColor="#fff"
        android:clickable="false"
        android:textSize="20sp"
        android:background="@color/disable"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="290dp"
        android:layout_height="70dp"
        android:text="@string/apply_update"/>

</FrameLayout>