<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config_Fragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_ssid_config_wifi"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ssid_config_wifi"
            android:gravity="center_horizontal"
            android:text="@string/label_ssid_Config_wifi"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/hello_Config_wifi"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/second_password_Config_wifi"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="124dp"
            android:gravity="center_horizontal"
            android:text="@string/password_Config_wifi"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ssid_config_wifi"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="74dp"
            android:gravity="center_horizontal"
            android:text="@string/ssid_Config_wifi"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_wifi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="163dp"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_wifi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="160dp"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/password_ok_config_wifi"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="119dp"
            android:gravity="center_horizontal"
            android:textColor="@color/red"
            android:text="@string/error_password_Config_wifi"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_config_Wifi"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@color/disable"
            android:clickable="false"
            android:padding="20dp"
            android:text="@string/wait_config"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>
</FrameLayout>