<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border_layout"
    android:padding="20dp"
    >
    <TextView
        android:textColor="#fff"
        android:id="@+id/information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_information"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <TextView
        android:textColor="#fff"
        android:textSize="17sp"
        android:id="@+id/information_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_information"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:lineSpacingExtra="10dp"
        />

    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="@color/myBlueDark"
        android:text="@string/close_button_information"
        />
</LinearLayout>